# No-learning-rates-needed-Introducing-SALSA-Stable-Armijo-Line-Search-Adaptation

./: CITATION.cff  LICENSE  README.md  config.json  data.py  embedder.py  image_classifier.py  logger.py  main.py  pyproject.toml  run_multiple.py  run_multiple_img.py  setup.py
Presentation/: Slides.odp
salsa/: SaLSA.py
sls/: SaLSA.py  adam_sls.py
src/salsa/: SaLSA.py  sls_base.py
test/: cosine_scheduler.py  data.py  embedder.py  environment.yml  image_classifier.py  run_multiple_img.py  train.py  train_img.py  utils.py
test/models/: resnet.py
